force-app/main/default/objects/vlocity_cmt__CatalogRelationship__c/vlocity_cmt__CatalogRelationship__c.object-meta.xml
<CustomObject>
    <description>Associates a catalog category with a higher-level catalog. Catalogs are usually connected in a hierarchy, but catalog relationships enable reuse of portions of a catalog hierarchy under more than one higher-level catalog.</description>
    <label>Catalog Relationship</label>
    <nameField>
        <label>Catalog Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>