force-app/main/default/objects/vlocity_cmt__CatalogRelationship__c/fields/vlocity_cmt__ChildCatalogId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ChildCatalogId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Child Catalog</label>
    <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
    <relationshipLabel>Catalog Relationships (Child Catalog)</relationshipLabel>
    <relationshipName>ChildCatalogRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>