force-app/main/default/objects/vlocity_cmt__CatalogRelationship__c/fields/vlocity_cmt__ParentCatalogId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ParentCatalogId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Catalog</label>
    <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
    <relationshipLabel>Catalog Relationships</relationshipLabel>
    <relationshipName>ParentCatalogRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>