force-app/main/default/objects/vlocity_cmt__CatalogRelationship__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>vlocity_cmt__ChildCatalogId__c</columns>
    <columns>vlocity_cmt__ParentCatalogId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>